--- a/SpringAdv/src/main/resources/static/write.html
+++ b/SpringAdv/src/main/resources/static/write.html
@@ -45,7 +45,7 @@
                 return;
             }
 
-            let data = {'title': title, 'contents': contents};
+            let data = {'title': title, 'contents': contents, 'likes':0};
             $.ajax({
                 type: "POST",
                 url: "/api/contents",
